fixed col classes and pull-right, added test thumbnail

--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Content/Site.css
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Content/Site.css
@@ -27,7 +27,10 @@ textarea {
     float:right;
 }
 
-.myFloatRight a:link, a:visited, a:hover, a:active {
+.panel-heading a:link,
+               a:visited, 
+               a:hover, 
+               a:active {
     color:white;
 }
 
