--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -15,7 +15,7 @@
             </div>
         </div>
 
-        <div class="panel-body">
+        <div class="panel-body" style="background-color:#f1f1f1">
             <div class="row">
                 <div class="col-sm-2">
                     <a href="#" class="thumbnail">
@@ -26,7 +26,23 @@
                 <div class="col-sm-8">df</div>
 
                 <div class="col-sm-2">
-                    <p class="pull-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pulling-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                </div>
+            </div>
+
+            <hr />
+
+            <div class="row">
+                <div class="col-sm-2">
+                    <a href="#" class="thumbnail">
+                        <img src="http://blog.room34.com/wp-content/uploads/underdog/logo.thumbnail.png" alt="...">
+                    </a>
+                </div>
+
+                <div class="col-sm-8">df</div>
+                                
+                <div class="col-sm-2">
+                    <p class="pulling-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
         </div>
@@ -43,6 +59,7 @@
                     <p class="pull-right">@Html.ActionLink("View all", "Index", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
+
         </div>
 
         <div class="panel-body">
