--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -4,54 +4,57 @@
 <div class="container-fluid">
     <div class="row">
         <div id="myNews" class="panel panel-primary">
-        <div class="panel-heading">
-            <div class="row">
-                <div class="col-sm-10">
-                    <p>News</p>
-                </div>
-
-                <div class="col-sm-2">
-                    <p class="pull-right">@Html.ActionLink("View all", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
-                </div>
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-sm-10">
+                        <p>News</p>
+                    </div>
+                    <div class="col-sm-2">
+                        <p class="pull-right">@Html.ActionLink("View all", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    </div>
                 </div>
             </div>
+
             <div class="panel-body col-sm-12">
-        <div class="panel-body" style="background-color:#f1f1f1">
-            <div class="row">
-                <div class="col-sm-2">
-                    <a href="#" class="thumbnail">
-                        <img src="http://blog.room34.com/wp-content/uploads/underdog/logo.thumbnail.png" alt="...">
-                    </a>
-                </div>
+                <div class="panel-body" style="background-color:#f1f1f1">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <a href="#" class="thumbnail">
+                                <img src="http://blog.room34.com/wp-content/uploads/underdog/logo.thumbnail.png" alt="...">
+                            </a>
+                        </div>
 
-                <div class="col-sm-8">df</div>
+                        <div class="col-sm-7">df</div>
 
-                <div class="col-sm-2">
-                    <p class="pulling-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
-                </div>
-            </div>
+                        <div class="col-sm-3 col-sm-offset-9">
+                            <p class="pull-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                        </div>
+                    </div>
 
-            <hr />
+                    <hr />
 
-            <div class="row">
-                <div class="col-sm-2">
-                    <a href="#" class="thumbnail">
-                        <img src="http://blog.room34.com/wp-content/uploads/underdog/logo.thumbnail.png" alt="...">
-                    </a>
-                </div>
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <a href="#" class="thumbnail">
+                                <img src="http://blog.room34.com/wp-content/uploads/underdog/logo.thumbnail.png" alt="...">
+                            </a>
+                        </div>
 
-                <div class="col-sm-8">df</div>
-                                
-                <div class="col-sm-2">
-                    <p class="pulling-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
-                </div>
-            </div>
+                        <div class="col-sm-8">df</div>
+
+                        <div class="col-sm-3 col-sm-offset-9">
+                            <p class="pull-right">
+                                @Html.ActionLink("Read More", "Contact", "Home")
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div id="myProjects" class="panel panel-success">
+</div>
+<div class="row">
+    <div id="myProjects" class="panel panel-success">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
@@ -65,30 +68,30 @@
 
         </div>
 
-            <div class="panel-body">
-                <table class="table table-striped">
-                    <tr>
-                        <td>
-                            test
-                        </td>
-                        <td>
-                            test
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            test
-                        </td>
-                        <td>
-                            test
-                        </td>
-                    </tr>
-                </table>
-            </div>
+        <div class="panel-body">
+            <table class="table table-striped">
+                <tr>
+                    <td>
+                        test
+                    </td>
+                    <td>
+                        test
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        test
+                    </td>
+                    <td>
+                        test
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
-    <div class="row">
-        <div id="myBlogs" class="panel panel-info">
+</div>
+<div class="row">
+    <div id="myBlogs" class="panel panel-info">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
@@ -98,29 +101,35 @@
                 <div class="col-sm-2">
                     <p class="pull-right">View all<span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
-                </div>
-            </div>
-
-            <div class="panel-body">
-                <table class="table table-striped">
-                    <tr>
-                        <td>
-                            test
-                        </td>
-                        <td>
-                            test
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            test
-                        </td>
-                        <td>
-                            test
-                        </td>
-                    </tr>
-                </table>
             </div>
         </div>
+
+        <div class="panel-body">
+            <table class="table table-striped">
+                <tr>
+                    <td>
+                        test
+                    </td>
+                    <td class="col-sm-2">
+                        test
+                    </td>
+                    <td class="col-sm-2 col-sm-offset-10">
+                        <p class="pull-right">Read more<span class="glyphicon glyphicon-chevron-right"></span></p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        test
+                    </td>
+                    <td>
+                        test
+                    </td>
+                    <td class="col-sm-2 col-sm-offset-10">
+                        <p class="pull-right">Read more<span class="glyphicon glyphicon-chevron-right"></span></p>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
+</div>
 </div>
