--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -7,7 +7,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-sm-10">
-                    <p><b>News</b></p>
+                    <p>News</p>
                     </div>
                     <div class="col-sm-2">
                         <p class="pull-right">@Html.ActionLink("View all", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
@@ -15,7 +15,7 @@
                 </div>
             </div>
 
-        <div class="panel-body">
+        <div class="panel-body" style="background-color:#f1f1f1">
                     <div class="row">
                         <div class="col-sm-3">
                             <a href="#" class="thumbnail">
@@ -23,20 +23,9 @@
                             </a>
                         </div>
 
-                <div class="col-sm-7">
-                    <h2>Test News One!</h2>
-                    <p>
-                        <b>
-                            Here is the first test news for this design, it's used to test the layout of the text and if it works as intended.
-                        </b>
-                    </p>
-                </div>
-
-                <div class="col-sm-3 col-sm-offset-9">
-                    <p class="pull-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                <div class="col-sm-8">df</div>
                         </div>
                     </div>
-
                     <hr />
 
                     <div class="row">
@@ -46,17 +35,6 @@
                             </a>
                         </div>
 
-                <div class="col-sm-7">
-                    <h2>Test News Two</h2>
-                    <p>
-                        <b>
-                            Here is the second test news for this design, it's used to test the text alignment. here comes som random text = Ought these are balls place mrs their times add she. Taken no great widow spoke of it small. Genius use except son esteem merely her limits. Sons park by do make on. It do oh cottage offered cottage in written. Especially of dissimilar up attachment themselves by interested boisterous. Linen mrs seems men table. Jennings dashwood to quitting marriage bachelor in. On as conviction in of appearance apartments boisterous.
-                        </b>
-                    </p>
-                </div>
-
-                <div class="col-sm-3 col-sm-offset-9">
-                    <p class="pull-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
 
@@ -68,17 +46,10 @@
                     </a>
                 </div>
 
-                <div class="col-sm-7">
-                    <h2>Test News Three</h2>
-                    <p>
-                        <b>
-                            Here is the third test news for this design just for population purpose. Perhaps far exposed age effects. Now distrusts you her delivered applauded affection out sincerity. As tolerably recommend shameless unfeeling he objection consisted. She although cheerful perceive screened throwing met not eat distance. Viewing hastily or written dearest elderly up weather it as. So direction so sweetness or extremity at daughters. Provided put unpacked now but bringing. Its had resolving otherwise she contented therefore. Afford relied warmth out sir hearts sister use garden. Men day warmth formed admire former simple. Humanity declared vicinity continue supplied no an. He hastened am no property exercise of. Dissimilar comparison no terminated devonshire no literature on. Say most yet head room such just easy.
-                        </b>
-                    </p>
-                </div>
-
-                <div class="col-sm-3 col-sm-offset-9">
-                    <p class="pull-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                <div class="col-sm-8">df</div>
+                                
+                <div class="col-sm-2">
+                    <p class="pulling-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                     </div>
                 </div>
             </div>
@@ -90,7 +61,7 @@
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
-                    <p><b>Projects</b></p>
+                    <p>Projects</p>
                 </div>
 
                 <div class="col-sm-2">
@@ -127,7 +98,7 @@
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
-                    <p><b>Blogs</b></p>
+                    <p>Blogs</p>
                 </div>
 
                 <div class="col-sm-2">
