created more views

--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -10,7 +10,7 @@
                 </div>
 
                 <div class="col-sm-2">
-                    <p class="pull-right">@Html.ActionLink("View all", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pull-right">@Html.ActionLink("View all", "News", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
                     </p>
                 </div>
                 <div class="col-sm-3 col-sm-offset-9">
-                    <p class="pull-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pull-right">@Html.ActionLink("Read More", "NewsOne", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
             <hr />
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="col-sm-3 col-sm-offset-9">
-                    <p class="pull-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pull-right">@Html.ActionLink("Read More", "NewsTwo", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="col-sm-3 col-sm-offset-9">
-                    <p class="pull-right">@Html.ActionLink("Read More", "Contact", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pull-right">@Html.ActionLink("Read More", "NewsThree", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
         </div>
