--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/NewsOne.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/NewsOne.cshtml
@@ -19,7 +19,7 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-sm-12">
-                        <img class="img-responsive center-block" src="http://blog.room34.com/wp-content/uploads/underdog/logo.thumbnail.png" alt="...">
+                    <img class="img-responsive center-block" src="http://blog.room34.com/wp-content/uploads/underdog/logo.thumbnail.png" alt="...">
                     <hr />
                 </div>
             </div>
@@ -61,3 +61,4 @@
             </div>
         </div>
     </div>
+</div>
