--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -126,7 +126,7 @@
                 </div>
 
                 <div class="col-sm-2">
-                    <p class="pull-right">View all<span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pull-right">@Html.ActionLink("View all", "Blogs", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
         </div>
