--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/News.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/News.cshtml
@@ -11,7 +11,7 @@
                 </div>
 
                 <div class="col-sm-2">
-                    
+
                 </div>
             </div>
         </div>
@@ -81,4 +81,4 @@
             </div>
         </div>
     </div>
-
+</div>
