--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/Blogs.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/Blogs.cshtml
@@ -1,4 +1,4 @@
-﻿@{ 
+﻿@{
     ViewBag.Title = "Blogs";
 }
 
@@ -11,30 +11,45 @@
                 </div>
 
                 <div class="col-sm-2">
-                    
+
                 </div>
             </div>
         </div>
 
         <div class="panel-body">
-            <table class="table table-striped">
-                <tr>
-                    <td>
-                        test
-                    </td>
-                    <td>
-                        test
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        test
-                    </td>
-                    <td>
-                        test
-                    </td>
-                </tr>
-            </table>
+            <div class="row">
+                <div class="col-sm-7">
+                    Text
+                </div>
+                <div class="col-sm-4 col-sm-offset-1">
+                    Info om person eller w/e
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-sm-7">
+                    Text
+                </div>
+                <div class="col-sm-1">
+                    Glipa
+                </div>
+                <div class="col-sm-4">
+                    Info om person eller w/e
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-sm-7">
+                    Text
+                </div>
+                <div class="col-sm-1">
+                    Glipa
+                </div>
+                <div class="col-sm-4">
+                    Info om person eller w/e
+                </div>
+            </div>
+            <hr />
         </div>
     </div>
 </div>
