--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
@@ -42,20 +42,21 @@
                     </button>
                     <a class="navbar-brand" href="~/Home/About">News Flash</a>
                 </div>
-
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <ul class="nav navbar-nav pull-left">
+                        @*
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        *@
                         <li><a href="#myNews">News</a></li>
                         <li><a href="#myProjects">Projects</a></li>
                         <li><a href="#myBlogs">Blogs</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
-        </div><!-- /noselect class-->
+        </div><!-- /noselect class -->
     </nav>
     <div class="container body-content">
         @RenderBody()
