--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -93,7 +93,6 @@
                     <p class="pull-right">@Html.ActionLink("View all", "Index", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
-
         </div>
 
         <div class="panel-body">
@@ -124,32 +123,103 @@
                 <div class="col-sm-10">
                     <p><b>Blogs</b></p>
                 </div>
-
                 <div class="col-sm-2">
                     <p class="pull-right">@Html.ActionLink("View all", "Blogs", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
         </div>
-
-        <div class="panel-body">
-            <table class="table table-striped">
-                <tr>
-                    <td>
-                        test
-                    </td>
-                    <td>
-                        test
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        test
-                    </td>
-                    <td>
-                        test
-                    </td>
-                </tr>
-            </table>
+        <div class="row">
+            <div class="container-fluid">
+                <div class="panel panel-default col-sm-8" style="margin-bottom:0;">
+                    <div class="panel-body" style="background-color:#f7f7f7; margin-top:20px;">
+                        <div class="col-sm-12">
+                            <div class="h3">
+                                Folly words
+                            </div>
+                            <p>
+                                Folly words widow one downs few age every seven.
+                                If miss part by fact he park just shew.
+                                Discovered had get considered projection who favourable.
+                                Necessary up knowledge it tolerably.
+                                Unwilling departure education is be dashwoods or an.
+                                Use off agreeable law unwilling sir deficient curiosity instantly.
+                                Easy mind life fact with see has bore ten.
+                                Parish any chatty can elinor direct for former.
+                                Up as meant widow equal an share least.
+                            </p>
+                        </div>
+                        <div class="col-sm-3 col-sm-offset-9">
+                            <p class="pull-right">@Html.ActionLink("Read More", "BlogsOne", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                        </div>
+                    </div>
+                    <hr />
+                </div>
+                <div class="panel panel-default col-sm-4">
+                    <div class="panel-body" style="margin-top:20px;">
+                        <div class="col-sm-4">
+                            <div class="thumbnail" style="margin-top:20px;">
+                                <img class="img-responsive" style="max-height:100px" src="https://nirrep.files.wordpress.com/2014/09/incognito.jpg">
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div class="h3">
+                                M.W. Gaine
+                            </div>
+                            <p>
+                                Mr my ready guest ye after short at.
+                                Gave read use way make spot how nor.
+                                View fine me gone this name an rank.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="container-fluid">
+                <div class="panel panel-default col-sm-8">
+                    <div class="panel-body" style="background-color:azure">
+                        <div class="col-sm-12">
+                            <div class="h3">
+                                Needed feebly
+                            </div>
+                            <p>
+                                Needed feebly dining oh talked wisdom oppose at.
+                                Applauded use attempted strangers now are middleton concluded had.
+                                It is tried ﻿no added purse shall no on truth.
+                                Pleased anxious or as in by viewing forbade minutes prevent.
+                                Too leave had those get being led weeks blind.
+                                Had men rose from down lady able.
+                                Its son him ferrars proceed six parlors.
+                                Her say projection age announcing decisively men.
+                                Few gay sir those green men timed downs widow chief.
+                                Prevailed remainder may propriety can and.
+                            </p>
+                        </div>
+                        <div class="col-sm-3 col-sm-offset-9">
+                            <p class="pull-right">@Html.ActionLink("Read More", "BlogsTwo", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default col-sm-4">
+                    <div class="panel-body" style="background-color:azure">
+                        <div class="col-sm-4">
+                            <div class="thumbnail" style="margin-top:20px;">
+                                <img class="img-responsive" style="max-height:100px" src="https://nirrep.files.wordpress.com/2014/09/incognito.jpg">
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div class="h3">
+                                B. Wayne
+                            </div>
+                            <p>
+                                Am of mr friendly by strongly peculiar juvenile.
+                                Unpleasant it sufficient simplicity am by friendship no inhabiting.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
