--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -2,8 +2,9 @@
     ViewBag.Title = "About";
 }
 
+<div id="myNews"></div>
 <div class="container-fluid">
-    <div id="myNews" class="panel panel-primary">
+    <div class="panel panel-primary">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
@@ -81,8 +82,8 @@
             </div>
         </div>
     </div>
-
-    <div id="myProjects" class="panel panel-success">
+    <div id="myProjects"></div>
+    <div class="panel panel-success">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
@@ -116,8 +117,8 @@
             </table>
         </div>
     </div>
-
-    <div id="myBlogs" class="panel panel-info">
+    <div id="myBlogs"></div>
+    <div class="panel panel-info">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
