--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -82,7 +82,7 @@
         </div>
     </div>
 
-    <div id="myProjects" class="panel panel-success">
+    <div id="myProd" class="panel panel-success">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
