--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
@@ -50,9 +50,9 @@
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         *@
-                        <li><a href="#myNews">News</a></li>
-                        <li><a href="#myProjects">Projects</a></li>
-                        <li><a href="#myBlogs">Blogs</a></li>
+                        <li><a id="thisNews">News</a></li>
+                        <li><a id="thisProd">Projects</a></li>
+                        <li><a id="thisBlogs">Blogs</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
