Fixed padding on children

--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/BlogsTwo.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/BlogsTwo.cshtml
@@ -2,9 +2,9 @@
 @{
     ViewBag.Title = "BlogsTwo";
 }
-
+<div id="myBlogs"></div>
 <div class="container-fluid">
-    <div id="myBlogs" class="panel panel-info">
+    <div  class="panel panel-info">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-12">
