--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/Blogs.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/Blogs.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewBag.Title = "Blogs";
 }
-
+<div id="myBlogs"></div>
 <div class="container-fluid">
-    <div id="myBlogs" class="panel panel-info">
+    <div class="panel panel-info">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-12">
