--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/News.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/News.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewBag.Title = "News";
 }
-
+<div id="myNews"></div>
 <div class="container-fluid">
-    <div id="myNews" class="panel panel-primary">
+    <div class="panel panel-primary">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
