--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -83,7 +83,7 @@
         </div>
     </div>
     <div id="myProjects"></div>
-    <div class="panel panel-success">
+    <div class="panel panel-success slideanim">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
@@ -118,7 +118,7 @@
         </div>
     </div>
     <div id="myBlogs"></div>
-    <div class="panel panel-info">
+    <div class="panel panel-info slideanim">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-10">
@@ -132,7 +132,7 @@
         <div class="row">
             <div class="container-fluid">
                 <div class="panel panel-default col-sm-8" style="margin-bottom:0;">
-                    <div class="panel-body" style="background-color:#f7f7f7; margin-top:20px;">
+                    <div class="panel-body" style="background-color:#F2EFDC; margin-top:20px;">
                         <div class="col-sm-12">
                             <div class="h3">
                                 Folly words
@@ -156,7 +156,7 @@
                     <hr />
                 </div>
                 <div class="panel panel-default col-sm-4">
-                    <div class="panel-body" style="margin-top:20px;">
+                    <div class="panel-body" style="margin-top:20px; background-color:#F2EFDC">
                         <div class="col-sm-4">
                             <div class="thumbnail" style="margin-top:20px;">
                                 <img class="img-responsive" style="max-height:100px" src="https://nirrep.files.wordpress.com/2014/09/incognito.jpg">
@@ -164,7 +164,7 @@
                         </div>
                         <div class="col-sm-8">
                             <div class="h3">
-                                M.W. Gaine
+                                A. Pennyworth
                             </div>
                             <p>
                                 Mr my ready guest ye after short at.
@@ -179,7 +179,7 @@
         <div class="row">
             <div class="container-fluid">
                 <div class="panel panel-default col-sm-8">
-                    <div class="panel-body" style="background-color:azure">
+                    <div class="panel-body" style="background-color:#E4E0FC">
                         <div class="col-sm-12">
                             <div class="h3">
                                 Needed feebly
@@ -203,7 +203,7 @@
                     </div>
                 </div>
                 <div class="panel panel-default col-sm-4">
-                    <div class="panel-body" style="background-color:azure">
+                    <div class="panel-body" style="background-color:#E4E0FC">
                         <div class="col-sm-4">
                             <div class="thumbnail" style="margin-top:20px;">
                                 <img class="img-responsive" style="max-height:100px" src="https://nirrep.files.wordpress.com/2014/09/incognito.jpg">
