--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/Blogs.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/Blogs.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "Blogs";
 }
-<div id="myBlogs"></div>
-<div class="container-fluid">
+
+<div class="container-fluid" style="padding-top:55px">
     <div class="panel panel-info">
         <div class="panel-heading">
             <div class="row">
