--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/NewsOne.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/NewsOne.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "NewsOne";
 }
-<div id="myNews"></div>
-<div class="container-fluid">
+
+<div class="container-fluid" style="padding-top:55px">
     <div class="panel panel-primary">
         <div class="panel-heading">
             <div class="row">
