--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
@@ -52,9 +52,9 @@
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         *@
-                        <li><a href="#myNews">News</a></li>
-                        <li><a href="#myProjects">Projects</a></li>
-                        <li><a href="#myBlogs">Blogs</a></li>
+                        <li><a id="navNews" @*onclick="SmoothSlide('#myNews')"*@ @*href="#myNews"*@>News</a></li>
+                        <li><a id="navProjects" @*onclick="SmoothSlide('#myProjects')"*@ @*href="#myProjects"*@>Projects</a></li>
+                        <li><a id="navBlogs" @*onclick="SmoothSlide('#myBlogs')"*@ @*href="#myBlogs"*@>Blogs</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
